Fixed post content.

--- a/posts/1.md
+++ b/posts/1.md
@@ -7,7 +7,7 @@ tag: "css"
 If you use a percentage value for `paddig-top`, the elements height will be set to `width * percentage`. To get an 3:2 aspect ratio, for example, use
 
 ```css
-.two-by-one {
+.three-by-two {
     padding-top: 66.66%;
 }
 ```
