Added syntax highliting.

--- a/posts/1.md
+++ b/posts/1.md
@@ -14,7 +14,7 @@ If you use a percentage value for `paddig-top`, the elements height will be set 
 
 See the following table for more examples.
 
-| aspect ratio | `padding-top` |
+| Aspect ratio | `padding-top` |
 | ------------ | ------------- |
 | 1:1          | 100%          |
 | 4:3          | 75%           |
