--- a/posts/2.md
+++ b/posts/2.md
@@ -1,7 +1,7 @@
 ---
 title: "Commit case-sensitiv filename changes in Git"
 date: "2020-12-11"
-tag: "js"
+tag: "tools"
 ---
 
 If you want to commit filename changes that are only about changing the capitalization, you'll need the `git mv` command.
